@@ -71,12 +71,16 @@
 
 //			header('Last-Modified: ' . gmdate('D, d M Y H:i:s', time()) . " GMT");
 
+			$page_title = '';
+			if(isset($ZBX_SERVER_NAME) && !zbx_empty($ZBX_SERVER_NAME)){
+				$page_title = $ZBX_SERVER_NAME.': ';
+			}
+			
 			if(isset($page['title']) && defined($page['title'])){
-
-				$page_title = constant($page['title']);
+				$page_title .= constant($page['title']);
 			}
 			else{
-				$page_title = 'ZABBIX';
+				$page_title .= 'ZABBIX';
 				$page['title'] = 'S_ZABBIX';
 			}
 
